# nexus

./: LICENSE  README.md  angular.json  package-lock.json  package.json  tailwind.config.js
migrations/2024-05-11-230603_create_notes/: down.sql  up.sql
migrations/2024-05-25-140035_create_tasks/: down.sql  up.sql
migrations/2024-05-25-140818_create_lists/: down.sql  up.sql
migrations/2024-06-09-231218_create_events/: down.sql  up.sql
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs  schema.rs
src-tauri/src/controllers/: event_controller.rs  mod.rs  note_controller.rs  task_controller.rs  task_list_controller.rs
src-tauri/src/models/: event.rs  mod.rs  note.rs  task.rs  task_list.rs
src-tauri/src/services/: events_services.rs  mod.rs  notes_services.rs  tasks_lists_services.rs  tasks_services.rs
src-tauri/src/system_tray/: mod.rs  system_tray.rs
src/app/: app.component.ts  app.config.ts  app.routes.ts
src/app/models/: event.model.ts  note.model.ts  task.model.ts  taskList.model.ts
src/app/modules/calendar/components/calendar/: calendar.component.html  calendar.component.ts
src/app/modules/calendar/components/day-view/: day-view.component.html  day-view.component.ts
src/app/modules/shared/directives/: stop-propagation.directive.ts
src/app/services/: calendar-events.service.ts  notes.service.ts  notification.service.ts  task-list.service.ts  tasks.service.ts
src/app/utils/: calendar.utils.ts  modal.utils.ts
(+31 files in other folders)
