[package]
name = "nexus"
version = "0.0.0"
description = "An app for task management"
authors = ["Edward Alexander Rodríguez Londoño"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "notification-all", "system-tray", "dialog-message", "window-set-min-size", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread"] }
tokio-macros = "2.2.0"
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "uuid", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
uuid = "1.8.0"
cron = "0.12.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
